//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Pessoas {
  id Int [pk, increment]
  nomeCompleto String [unique, not null]
  dataNascimento DateTime [not null]
  sexo String [not null]
  estadoCivil String [not null]
  nacionalidade String [not null]
  naturalidade String [not null]
  situacao String [not null]
  cpfCnpj String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Documento Documentos [not null]
  enderecos Enderecos [not null]
  PessoasJuridica PessoaJuridicas [not null]
  pessoas Relacionamentos [not null]
  pessoaRelacionadas Relacionamentos [not null]
  telefones Telefones [not null]
  Usuario Usuarios [not null]
  contaBancarias contaBancarias [not null]
}

Table PessoaJuridicas {
  id Int [pk, increment]
  idPessoa Int [not null]
  nomeFantasia String [unique, not null]
  ramo String [not null]
  inscricaoEstadual String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  pessoa Pessoas [not null]
}

Table Relacionamentos {
  id Int [pk, increment]
  idPessoa Int [not null]
  idPessoaRelacionada Int [not null]
  tipo String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  pessoa Pessoas [not null]
  pessoaRelacionada Pessoas [not null]
}

Table Enderecos {
  id Int [pk, increment]
  idPessoa Int [not null]
  endereco String [not null]
  principal Boolean [default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  enderecos Pessoas [not null]
}

Table contaBancarias {
  id Int [pk, increment]
  idPessoa Int [not null]
  banco String [not null]
  agencia String [not null]
  conta String [not null]
  principal Boolean [default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  contaBancaria Pessoas [not null]
  pix Pix [not null]
}

Table Pix {
  id Int [pk, increment]
  idBanco Int [not null]
  chave String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  tipo String [not null]
  Conta contaBancarias [not null]
}

Table Telefones {
  id Int [pk, increment]
  idPessoa Int [not null]
  numero String [not null]
  principal Boolean [default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  telefones Pessoas [not null]
}

Table Documentos {
  id Int [pk, increment]
  idPessoa Int [not null]
  numeroDeRegistro String [not null]
  nomedocs String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Documento Pessoas [not null]
}

Table Usuarios {
  id Int [pk, increment]
  idPessoa Int [not null]
  username String [not null]
  email String [unique, not null]
  senha String [not null]
  role Usuario_role [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Usuario Pessoas [not null]
}

Enum Usuario_role {
  admin
  user
}

Ref: PessoaJuridicas.idPessoa > Pessoas.id

Ref: Relacionamentos.idPessoa > Pessoas.id

Ref: Relacionamentos.idPessoaRelacionada > Pessoas.id

Ref: Enderecos.idPessoa > Pessoas.id

Ref: contaBancarias.idPessoa > Pessoas.id

Ref: Pix.idBanco > contaBancarias.id

Ref: Telefones.idPessoa > Pessoas.id

Ref: Documentos.idPessoa > Pessoas.id

Ref: Usuarios.idPessoa > Pessoas.id